syntax = "proto3";

package libvirt_api ;

import "google/protobuf/wrappers.proto";

service LibvirtAPI {
  rpc ListDomains (ListDomainsRequest) returns (stream Domain);
  rpc CreateDomain (CreateDomainRequest) returns (CreateDomainResponse);
  rpc DestroyDomain (DestroyDomainRequest) returns (DestroyDomainResponse);
}

message ListDomainsRequest {
  uint32 flags = 1;
}

message Domain {
  bytes uuid = 1;
  uint32 id = 2;
  string name = 3;
  google.protobuf.StringValue hostname = 4;
  google.protobuf.StringValue os_type = 5;
  DomainState state = 6;
  uint64 memory = 7;
  uint64 memory_max = 8;
  uint32 virt_cpu_num = 9;
  uint64 virt_cpu_time = 10;
}

enum DomainState {
  DOMAIN_STATE_UNSPECIFIED = 0;
  DOMAIN_STATE_NOSTATE = 1;
  DOMAIN_STATE_RUNNING = 2;
  DOMAIN_STATE_BLOCKED = 3;
  DOMAIN_STATE_PAUSED = 4;
  DOMAIN_STATE_SHUTDOWN = 5;
  DOMAIN_STATE_SHUTOFF = 6;
  DOMAIN_STATE_CRASHED = 7;
  DOMAIN_STATE_PMSUSPENDED = 8;
}

message CreateDomainRequest {
  bytes uuid = 1;
}

message CreateDomainResponse {
  bool success = 1;
  optional string error = 2;
}

message DestroyDomainRequest {
  bytes uuid = 1;
}

message DestroyDomainResponse {
  bool success = 1;
  optional string error = 2;
}
